--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css" href="style.css"> 
     <title>Wireframe</title>
 </head>
 <body>
@@ -11,8 +12,24 @@
         Welcome to the page!
     </header>
 
-    <div>
+    <nav>nav</nav>
         
+    <div>
+        <section>
+            section
+            <article>
+                article
+                <h1>h1, h2, h3</h1>
+
+                <p>Greetings</p>
+            </article>
+        </section>
     </div>
+    <div class="aside">
+        aside
+    </div>
+    <footer>
+        Footer
+    </footer>
 </body>
 </html>
